...
            Toast.makeText(context, "Changes saved", Toast.LENGTH_SHORT).show()
        }) {
            Text("Save changes")
        }
    }
...
            value = nameState.value,
            onValueChange = { nameState.value = it },
            label = { Text("Full name") },
            modifier = Modifier
                .fillMaxWidth()
                .requiredHeight(60.dp)
                .align(Alignment.Center)
                .testTag("fullNameTextField")
        )
    }
...
                }
            },
            label = { Text("Current Height (cm)") },
            modifier = Modifier
                .fillMaxWidth()
...

    if (genderState.value == 0) {
        gender = "Male"
    } else if (genderState.value == 1) {
        gender = "Female"
    } else if (genderState.value == 2) {
        gender = "Not Specific"
...
                OutlinedTextField(
                    value = gender,
                    label = { Text("Gender") },
                    onValueChange = {},
                    readOnly = true,
...
                        focusedContainerColor = Color.Transparent
                    ),
                    modifier = Modifier.menuAnchor().testTag("GenderDropdown"),
                    trailingIcon = {
                        ExposedDropdownMenuDefaults.TrailingIcon(expanded = isExpanded)
...
                    colors = transparentButtonColors,
                    modifier = Modifier.fillMaxSize()
                        .testTag("DOBButton")
                )
                {}
...

    if (activityLevelState.value == 0) {
        level = "Rarely"
    } else if (activityLevelState.value == 1) {
        level = "Moderate"
    } else if (activityLevelState.value == 2) {
        level = "Frequently"
...
                OutlinedTextField(
                    value = level,
                    label = { Text("Activity Level") },
                    onValueChange = {},
                    readOnly = true,
...
                        focusedContainerColor = Color.Transparent
                    ),
                    modifier = Modifier.menuAnchor().testTag("ActivityLevelDropdown"),
                    trailingIcon = {
                        ExposedDropdownMenuDefaults.TrailingIcon(expanded = isExpanded)
...
                    weeklyGoalState.value = it
                },
                label = { Text("Weekly Goal (kg)") },
                modifier = Modifier
                    .requiredHeight(60.dp)
                    .weight(1F)
                    .testTag("WeeklyGoalInput")
            )
        }
...

    if (nutrientGoalState.value == 0) {
        goal = "More Fiber"
    } else if (nutrientGoalState.value == 1) {
        goal = "Balance"
    } else if (nutrientGoalState.value == 2) {
        goal = "More Protein"
...
                    .requiredHeight(60.dp)
                    .weight(1F)
                    .testTag("CaloriesGoalInput")
            )

...
                        focusedContainerColor = Color.Transparent
                    ),
                    modifier = Modifier.menuAnchor().testTag("NutrientGoalDropdown")
                    ,
                    trailingIcon = {
...
                            isExpanded = false
                        },
                        modifier = Modifier.testTag("BalanceOption"))
                    DropdownMenuItem(
                        text = { Text(text = "More Protein") },
...
                            isExpanded = false
                        },
                        modifier = Modifier.testTag("MoreFiberOption"))
                }
            }
...
                    .requiredHeight(60.dp)
                    .weight(1F)
                    .testTag("StartingWeightInput")
            )

...
                    .requiredHeight(60.dp)
                    .weight(1F)
                    .testTag("TargetWeightInput")
            )
        }
...

    if (goalState.value == 0) {
        goal = "Lose weight"
    } else if (goalState.value == 1) {
        goal = "Gain muscles"
    } else if (goalState.value == 2) {
        goal = "Lose weight, Gain muscles"
...
                .menuAnchor()
                .fillMaxWidth()
                .testTag("GoalDropdown"),
            trailingIcon = {
                ExposedDropdownMenuDefaults.TrailingIcon(expanded = isExpanded)
...
                    isExpanded = false
                },
                modifier = Modifier.testTag("GainMusclesOption")
            )
            DropdownMenuItem(
...
